force-app/main/default/objects/Business_Unit_Affiliation__c/Business_Unit_Affiliation__c.object-meta.xml
<CustomObject>
    <label>Business Unit Affiliation</label>
    <nameField>
        <label>BUID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Unit Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>