force-app/main/default/objects/Business_Unit_Affiliation__c/fields/Affiliation_Number__c.field-meta.xml
<CustomField>
    <fullName>Affiliation_Number__c</fullName>
    <description>Sequential number per Business Unit, used to form the Name (ShortCode + 3 digit number).</description>
    <label>Affiliation Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>