force-app/main/default/objects/Business_Unit_Affiliation__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Business Unit this user is affiliated with.</description>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>Business_Unit_Affiliations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>