force-app/main/default/objects/Business_Unit_Affiliation__c/fields/Can_Manage_Billing__c.field-meta.xml
<CustomField>
    <fullName>Can_Manage_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grants elevated billing/financial permissions for this BU.</description>
    <label>Can Manage Billing</label>
    <type>Checkbox</type>
</CustomField>