force-app/main/default/objects/Business_Unit_Affiliation__c/fields/Can_View_All_Records__c.field-meta.xml
<CustomField>
    <fullName>Can_View_All_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grants the user elevated read rights for this BU.</description>
    <label>Can View All Records</label>
    <type>Checkbox</type>
</CustomField>