force-app/main/default/objects/Business_Unit_Affiliation__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this affiliation is active for access/sharing.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>