force-app/main/default/objects/Business_Unit_Affiliation__c/fields/Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this as the primary affiliation for this user.</description>
    <label>Primary Affiliation</label>
    <type>Checkbox</type>
</CustomField>