force-app/main/default/objects/Business_Unit_Affiliation__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who is affiliated with this Business Unit.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Affiliations</relationshipLabel>
    <relationshipName>User_Business_Unit_Affiliations</relationshipName>
    <type>Lookup</type>
</CustomField>