force-app/main/default/objects/Business_Unit_Affiliation__c/fields/Work_Email__c.field-meta.xml
<CustomField>
    <fullName>Work_Email__c</fullName>
    <description>Business-unit-specific work email for this affiliation. Entered manually; not derived.</description>
    <label>Work Email</label>
    <type>Email</type>
</CustomField>